@@ -5,13 +5,12 @@ import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FeaturesComponent extends BaseComponent {
 
-    private static final By SECTION_HEADING      = By.cssSelector("h2, .heading");
-    private static final By FEATURE_CARDS        = By.cssSelector(".hl-win-more-item");
-    private static final By FEATURE_TITLES       = By.cssSelector(".hl-win-more-item h3, .hl-win-more-item .title");
+    private static final By SECTION_HEADING = By.cssSelector("h2, .heading");
+    private static final By FEATURE_CARDS = By.cssSelector(".hl-win-more-item");
+    private static final By FEATURE_TITLES = By.cssSelector(".hl-win-more-item h3, .hl-win-more-item .title");
     private static final By FEATURE_DESCRIPTIONS = By.cssSelector(".hl-win-more-item p, .hl-win-more-item .description");
 
     public FeaturesComponent(WebDriver driver) {
@@ -30,14 +29,14 @@ public class FeaturesComponent extends BaseComponent {
         return findElements(FEATURE_TITLES).stream()
                 .map(WebElement::getText)
                 .filter(text -> !text.isBlank())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> getFeatureDescriptions() {
         return findElements(FEATURE_DESCRIPTIONS).stream()
                 .map(WebElement::getText)
                 .filter(text -> !text.isBlank())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public boolean hasFeature(String featureTitle) {
